--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My first app running on vps</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My first app running on vps</title>
 
-<style>
-  body {
-    background-color: brown;
-    color: #000;
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-</style>  
-</head>
-<body>
-  running on vps<br>
-  hello from mainframe<br>
-  update test3
-</body>
+    <style>
+      body {
+        background-color: brown;
+        color: #000;
+        font-size: 30px;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+    </style>
+  </head>
+  <body>
+    running on vps<br />
+    hello from mainframe<br />
+    update test3 test4
+  </body>
 </html>
