--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My first app running on vps</title>
-
-    <style>
-      body {
-        background-color: brown;
-        color: #000;
-        font-size: 30px;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-    </style>
+    <title>H I V E</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/16f6774484.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    running on vps<br />
-    hello from mainframe<br />
-    update test3 test4 test5
+    <div class="logo">hive</div>
+    <div class="sub">
+      hive.polychrom.dev </br>
+      engineered with
+      <i class="fa-solid fa-laptop-code"></i> &
+      <i class="fa-solid fa-heart"></i>
+    </div>
   </body>
 </html>
