--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
     -->
 
       <div class="flex">
+        <input id="search" type="search" />
         <div class="btn dropdown">
           <span id="timeline">Timeline</span>
           <div class="dropdown-content">
