--- a/src/index.html
+++ b/src/index.html
@@ -25,19 +25,12 @@
   <body>
     <div class="icon-video"></div>
     <div id="cockpit">
-      <div class="logo">hive</div>
-
-      <!--
-      <div class="flex">
-        <div id="project_count" class="btn"></div>
-        <div class="btn">all</div>
-        <div class="btn" onclick="filter(2021, this)">2021</div>
-        <div class="btn" onclick="filter(2005, this)">2005</div>
-      </div>
-    -->
+      <img src="assets/logo_sm.png" width="120" />
 
       <div class="flex">
+        <!--
         <input id="search" type="search" />
+        -->
         <div class="btn dropdown">
           <span id="timeline">Timeline</span>
           <div class="dropdown-content">
