--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   <body>
     <div class="icon-video"></div>
     <div id="cockpit">
-      <img src="assets/logo_sm.png" width="120" />
+      <div class="logo">hive</div>
 
       <div class="flex">
         <!--
