--- a/src/index.html
+++ b/src/index.html
@@ -51,11 +51,10 @@
     ></script>
   </head>
   <body>
-    <div class="icon-video"></div>
     <div id="cockpit">
       <div>
-        <div class="logo">hive</div>
-        <div class="logo-sub">output × process</div>
+        <div id="logo">hive</div>
+        <div id="logo-sub">output × process</div>
       </div>
       <!--
       <div id="viewed">view</div>
