--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     <div id="app__wrapper">
       <div id="cockpit">
         <div>
-          <div onmouseover="typeWriter(this)" id="logo">_</div>
+          <div id="logo">hive</div>
           <div id="logo-sub">output × process</div>
         </div>
         <!--
@@ -96,10 +96,11 @@
       </div>
       <div id="gallery"></div>
     </div>
-    <div id="modal__wrapper" onclick="closeModal()">
-      <div id="modal_close" onclick="closeModal()"></div>
 
-      <div id="modal"></div>
+    <div id="modal__wrapper" onclick="closeModal()">
+      <div id="modal">
+        <div id="modal_close" onclick="closeModal()"></div>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
